force-app/main/default/objects/Eligibility_Folder_Template__c/Eligibility_Folder_Template__c.object-meta.xml
<CustomObject>
    <label>Eligibility Folder Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Folder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>