force-app/main/default/objects/Eligibility_Folder_Template__c/fields/Degree_Title__c.field-meta.xml
<CustomField>
    <fullName>Degree_Title__c</fullName>
    <label>Degree Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>