force-app/main/default/objects/Eligibility_Folder_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Template</label>
    <referenceTo>Eligibility_Folder_Template__c</referenceTo>
    <relationshipLabel>Eligibility Folder Templates</relationshipLabel>
    <relationshipName>Eligibility_Folder_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>