force-app/main/default/objects/Eligibility_Folder_Template__c/fields/Qualification_Type__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Type__c</fullName>
    <label>Qualification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Work Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>