force-app/main/default/objects/Eligibility_Folder_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Degree_Title__c</columns>
    <columns>Folder_Type__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Level__c</columns>
    <columns>Parent_Template__c</columns>
    <columns>Qualification_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>